# OpMiniProject3

./: .gitignore  README.md  VolunteerRepositoryBase.py  aid.py  docker-compose.yml  nginx.conf  pyproject.toml  repository_base.py  restart_all.sh  soldier.py  user.py  user_rep.py  volunteer.py
backend/: Dockerfile  pyproject.toml
backend/app/: .env  email_verification.py  init_data.py  main.py  seed.py  seed_data.py  test_main.py  utils.py
backend/app/auth/: __init__.py  auth.py  routes.py
backend/app/containers/: application_container.py  services.py
backend/app/contracts/: __init__.py  aid_request_repository_base.py  repository_base.py  soldier_repository_base.py  volunteer_repository_base.py
backend/app/crud/: aid_request.py
backend/app/mailer/: __init__.py  mailer.py
backend/app/models/: __init__.py  aid_request.py  base.py  category.py  city.py  review.py  soldier.py  volunteer.py  volunteer_request.py
backend/app/repository/: __init__.py  aid_request_repository.py  category_repository.py  city_repository.py  repository_context.py  repository_manager.py  review_repository.py  soldier_repository.py  volunteer_repository.py
backend/app/schemas/: __init__.py  aid_request.py  category.py  review.py  search_options.py  soldier.py  volunteer.py  volunteer_request.py
backend/app/scripts/: __init__.py  seed_categories.py  seed_cities.py
backend/app/seed/: __init__.py  seed.py  seed_data.py
backend/my-project/: README.md  angular.json  package-lock.json  package.json
backend/op_miniproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+128 files in other folders)
