[project]
name = "op-miniproject"
version = "2025.03.23"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "psycopg[binary]",
  "sqlalchemy[asyncio]",
  "pydantic[email]",
  "pyjwt",
  "pydantic[email]",
  "passlib[bcrypt]",
  "pydantic[email]",
  "python-multipart",
]
requires-python = ">=3.12"
authors = [{ name = "Konovalenko Stanislav" }]
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
